// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<li
  className="item"
>
  <span>
    content
  </span>
</li>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<li
  className="item"
>
  <span>
    content 1
  </span>
  <span>
    content 2
  </span>
  <span>
    content 3
  </span>
</li>
`;

exports[`rendering renders correctly with no children 1`] = `""`;
